overflow body fixed

--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 body {
   background: #fff;
-  overflow:scroll;
+  overflow-y: scroll;
 }
 
 .logo-container {
